--- a/server/views/proposedAddress/includes/otherResidents.pug
+++ b/server/views/proposedAddress/includes/otherResidents.pug
@@ -1,4 +1,4 @@
-mixin otherResidents(prefix, savedAddress)
+mixin otherResidents(savedAddress)
     - var savedResidents = savedAddress.residents || []
     - var residentsToShow = savedResidents.length > 3 ? savedResidents.length : 3
     - var n = 0
@@ -17,11 +17,11 @@ mixin otherResidents(prefix, savedAddress)
             div.pure-g.u-paddingBottom.sm-smallPaddingBottom.resident
                 div.pure-u-1.pure-u-sm-5-12
                     label.form-label.hideNonMobile(for="residentname-"+n) Name
-                    input(id="residentname-"+n name=prefix+"[residents]["+n+"][name]" value=savedResidents[n] && savedResidents[n].name autocomplete="off" aria-label="Other resident's name" class=error.name ? "form-control residentName form-control-error" : "form-control residentName")
+                    input(id="residentname-"+n name="[residents]["+n+"][name]" value=savedResidents[n] && savedResidents[n].name autocomplete="off" aria-label="Other resident's name" class=error.name ? "form-control residentName form-control-error" : "form-control residentName")
                 div.pure-u-1.pure-u-sm-5-12.sm-PadLeftRight15
                     label.form-label.hideNonMobile(for="residentrelationship-"+n) Relation to offender
-                    input(id="residentrelationship-"+n name=prefix+"[residents]["+n+"][relationship]" value=savedResidents[n] && savedResidents[n].relationship autocomplete = "off" aria-label="Other resident's relationship to offender" class=error.relationship ? "form-control residentRelation form-control-error" : "form-control residentRelation")
+                    input(id="residentrelationship-"+n name="[residents]["+n+"][relationship]" value=savedResidents[n] && savedResidents[n].relationship autocomplete = "off" aria-label="Other resident's relationship to offender" class=error.relationship ? "form-control residentRelation form-control-error" : "form-control residentRelation")
                 div.pure-u-1.pure-u-sm-1-6
                     label.form-label.hideNonMobile(for="residentage-"+n) Age
-                    input(id="residentage-"+n name=prefix+"[residents]["+n+"][age]" value=savedResidents[n] && savedResidents[n].age autocomplete="off" aria-label="Other resident's age" class=error.age ? "form-control residentAge form-control-error" : "form-control residentAge")
+                    input(id="residentage-"+n name="[residents]["+n+"][age]" value=savedResidents[n] && savedResidents[n].age autocomplete="off" aria-label="Other resident's age" class=error.age ? "form-control residentAge form-control-error" : "form-control residentAge")
             - n++
