--- a/server/views/bassReferral/bassAreaCheck.pug
+++ b/server/views/bassReferral/bassAreaCheck.pug
@@ -13,37 +13,50 @@ block content
         h2.heading-large BASS area check
 
         div.pure-u-1.pure-u-md-1-2
-            | The offender has asked for a BASS property in the following area:
+            if bassRequest.specificArea === 'Yes'
+                | The offender has asked for a BASS property in the following area:
 
-            div.paddingTop.paddingBottom
+                div.paddingTop.paddingBottom
+                    div.pure-u-1-2
+                        div Proposed town
+                        div.bold#proposedTown #{bassRequest.proposedTown}
+                    div.pure-u-1-2
+                        div Proposed county or borough
+                        div.bold#proposedCounty #{bassRequest.proposedCounty}
+            else
                 div.pure-u-1-2
-                    div Proposed town
-                    div.bold#proposedTown #{bassRequest.proposedTown}
-                div.pure-u-1-2
-                    div Proposed county or borough
-                    div.bold#proposedCounty #{bassRequest.proposedCounty}
+                div Offender does not have a preferred BASS area
+
         div.pure-u-1.pure-u-md-1-2
 
         hr
 
-        h2.heading-medium Is the area suitable for the offender to live in?
+        if bassRequest.specificArea === 'Yes'
+            h2.heading-medium Is the area suitable for the offender to live in?
 
         form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="bookingId" value=bookingId || '')
+            input(type="hidden" name="bassAreaCheckSeen" value='true')
             div.paddingBottom.largeMarginBottom
 
-                div.form-group.inline.smallPaddingTop
-                    div.multiple-choice
-                        input#yes(type="radio" checked=bassAreaCheck.bassAreaSuitable === 'Yes' name="bassAreaSuitable" value="Yes")
-                        label(for="yes") Yes
+                if bassRequest.specificArea === 'Yes'
+                    div.form-group.inline.smallPaddingTop
+                        div.multiple-choice
+                            input#yes(type="radio" checked=bassAreaCheck.bassAreaSuitable === 'Yes' name="bassAreaSuitable" value="Yes")
+                            label(for="yes") Yes
 
-                    div.multiple-choice
-                        input#no(type="radio" checked=bassAreaCheck.bassAreaSuitable === 'No' name="bassAreaSuitable" value="No")
-                        label(for="no") No
+                        div.multiple-choice
+                            input#no(type="radio" checked=bassAreaCheck.bassAreaSuitable === 'No' name="bassAreaSuitable" value="No")
+                            label(for="no") No
 
                 div#bassAreaDetails.panel.panel-border-narrow
-                    label(for='bassAreaReason') Explain your decision
+
+                    if bassRequest.specificArea === 'Yes'
+                        label(for='bassAreaReason') Explain your decision
+                    else
+                        label(for='bassAreaReason') Enter any information that may affect the choice of BASS accommodation (optional)
+
                         textarea(name='bassAreaReason' id='bassAreaReason' class='form-control' rows='2' aria-label="Provide reasons why the BASS area is unsuitable")
                             if bassAreaCheck.bassAreaReason
                                 | #{bassAreaCheck.bassAreaReason}
