--- a/server/views/bassReferral/bassRequest.pug
+++ b/server/views/bassReferral/bassRequest.pug
@@ -1,14 +1,22 @@
 extends ../formTemplates/formTemplate
 
 block question
-    | Requested BASS area
+    | Does the offender have a preferred BASS area?
 
 block formItems
 
     -var bassRequest = data && data.bassRequest || {}
     input(type='hidden' name='bassRequested' value=bassRequest.bassRequested)
 
-    div#bassFollowUps.pure-u-1.pure-u-md-1-2
+    div.form-group.smallPaddingTop
+        div.multiple-choice(data-target="bassRequestForm")
+            input#yes(type="radio" checked=bassRequest.specificArea === 'Yes' name="specificArea" value="Yes")
+            label(for="yes") Yes
+        div.multiple-choice
+            input#no(type="radio" checked=bassRequest.specificArea === 'No' name="specificArea" value="No")
+            label(for="no") No
+
+    div#bassRequestForm.pure-u-1.pure-u-md-1-2(class="panel panel-border-narrow js-hidden")
         if errorObject.proposedTown
             span.error-message #{errorObject.proposedTown}
         div.form-group
