--- a/server/views/review/includes/bassRequest.pug
+++ b/server/views/review/includes/bassRequest.pug
@@ -3,13 +3,19 @@ include ./itemAndError
 -var errors = errorObject.bassReferral && errorObject.bassReferral.bassRequest || {}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
-    div.pure-u-1.pure-u-md-1-2
-        span Proposed town
-    div.pure-u-1.pure-u-md-1-2#bassTownDetails
-        +itemAndError(request.proposedTown, errors.proposedTown, "proposedTown")
 
-    div.pure-u-1-2
-        span Proposed county
-    div.pure-u-1.pure-u-md-1-2#bassCountyDetails
-        +itemAndError(request.proposedCounty, errors.proposedCounty, "proposedCounty")
+    if request.specificArea === 'Yes'
+        div.pure-u-1.pure-u-md-1-2
+            span Proposed town
+        div.pure-u-1.pure-u-md-1-2#bassTownDetails
+            +itemAndError(request.proposedTown, errors.proposedTown, "proposedTown")
+
+        div.pure-u-1-2
+            span Proposed county
+        div.pure-u-1.pure-u-md-1-2#bassCountyDetails
+            +itemAndError(request.proposedCounty, errors.proposedCounty, "proposedCounty")
+
+    else
+        div.pure-u-1.pure-u-md-1-2
+            span Offender does not have a preferred BASS area
 
