--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -27,6 +27,13 @@ block content
         div.pure-u-1-2
             if bassRequest.specificArea === 'No'
                 | Offender does not have a preferred BASS area
+
+                div.paddingTop.paddingBottom
+                    div.pure-u-1-1
+                        if bassAreaCheck.bassAreaReason
+                            div Notes:
+                            | #{bassAreaCheck.bassAreaReason }
+
             else
                 if bassAreaCheck.bassAreaSuitable === 'Yes'
                     | The responsible officer has approved the following BASS area:
@@ -38,6 +45,12 @@ block content
                     div.pure-u-1-2
                         div County
                         div.bold#proposedCounty #{bassRequest.proposedCounty}
+
+                    div.pure-u-1-1
+                    if bassAreaCheck.bassAreaReason
+                        div Notes:
+                        | #{bassAreaCheck.bassAreaReason }
+
         div.pure-u-1-2
 
         if !licenceStatus.postApproval
