--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -46,7 +46,7 @@ block content
                         div County
                         div.bold#proposedCounty #{bassRequest.proposedCounty}
 
-                    div.pure-u-1-1
+                    div.pure-u
                     if bassAreaCheck.bassAreaReason
                         div Notes:
                         | #{bassAreaCheck.bassAreaReason }
