--- a/server/views/taskList/tasks/createLicenceTask.pug
+++ b/server/views/taskList/tasks/createLicenceTask.pug
@@ -1,3 +1,13 @@
+
+-var userCanCreate = user.role === 'CA'
+-var stageAllowsCreate = postApproval && licenceStatus.stage !== 'MODIFIED_APPROVAL' && licenceStatus.decisions.approved
+
+-var isBass = licenceStatus.decisions.bassReferralNeeded
+
+-var curfewAddressComplete = !isBass && licenceStatus.decisions.curfewAddressApproved !== 'withdrawn'
+-var bassComplete = isBass && licenceStatus.tasks.bassOffer === 'DONE'
+
+
 div.paddingBottom
     h2.heading-medium Create licence
 
@@ -5,10 +15,10 @@ div.paddingBottom
         div.pure-u-1.pure-u-md-3-4
             | #{statusLabel}
         div.pure-u-1.pure-u-md-1-4.center
-            if postApproval && licenceStatus.stage !== 'MODIFIED_APPROVAL'
-                if user.role === 'CA' && licenceStatus.decisions.approved && licenceStatus.decisions.curfewAddressApproved !== 'withdrawn'
-                    -var path = "/hdc/pdf/select/" + bookingId
-                    +continue(path)
+
+            if userCanCreate && stageAllowsCreate && (curfewAddressComplete || bassComplete)
+                -var path = "/hdc/pdf/select/" + bookingId
+                +continue(path)
 
 
 
