--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -6,8 +6,11 @@ block content
     -var review = data.curfew && data.curfew.curfewAddressReview ? data.curfew.curfewAddressReview : {}
     -var addressSafety = data.curfew && data.curfew.addressSafety ? data.curfew.addressSafety : {}
     -var address = data.proposedAddress && data.proposedAddress.curfewAddress ? data.proposedAddress.curfewAddress : {}
-    -var addressWithdrawn = address.addressWithdrawn === 'Yes'
-    -var consentWithdrawn = address.consentWithdrawn === 'Yes'
+    -var withdrawnAddressObj = data.proposedAddress && data.proposedAddress.rejections && data.proposedAddress.rejections[data.proposedAddress.rejections.length-1] || {}
+    -var withdrawnAddress = withdrawnAddressObj.address || {}
+    -var addressWithdrawn = withdrawnAddressObj.withdrawalReason === 'withdrawAddress'
+    -var consentWithdrawn = withdrawnAddressObj.withdrawalReason === 'withdrawConsent'
+    -var showAddressActions = postApproval || stage === 'PROCESSING_CA'
 
     div.pure-g.pure-u-1
         div
@@ -22,17 +25,21 @@ block content
 
             h2.heading-large Proposed address
 
-            if address
-                div.pure-u-1.pure-u-1-2.midPaddingBottom
-                    p The following address has been requested by the offender
-                    if licenceStatus.tasks.curfewAddressReview === 'DONE'
-                        | and checked by the responsible officer.
 
+            div.pure-u-1.pure-u-1-2.midPaddingBottom
+                p The following address has been requested by the offender
+                if licenceStatus.tasks.curfewAddressReview === 'DONE'
+                    | and checked by the responsible officer.
+
+            if address.addressLine1
                 +addressDetail('curfew', address, review, addressSafety)
 
-                if ['PROCESSING_CA', 'DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(stage)
-                    div.borderBottomLightMedium.borderTopLight.marginBottomLarge
-                        include ./includes/addressActions
+            else if showAddressActions
+                +addressDetail('curfew', withdrawnAddress, review, addressSafety)
+
+            if showAddressActions
+                div.borderBottomLightMedium.borderTopLight.marginBottomLarge
+                    include ./includes/addressActions
 
             else
                 p NO ADDRESS
