Check bass Address task is complete for licence printing, not Bass Offer

--- a/server/views/taskList/tasks/createLicenceTask.pug
+++ b/server/views/taskList/tasks/createLicenceTask.pug
@@ -5,7 +5,7 @@
 -var isBass = licenceStatus.decisions.bassReferralNeeded
 
 -var curfewAddressComplete = !isBass && licenceStatus.decisions.curfewAddressApproved !== 'withdrawn'
--var bassComplete = isBass && licenceStatus.tasks.bassOffer === 'DONE'
+-var bassComplete = isBass && licenceStatus.tasks.bassAddress === 'DONE'
 
 
 div.paddingBottom
