--- a/server/views/bassReferral/rejected.pug
+++ b/server/views/bassReferral/rejected.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/alternativeForm
 
 block content
 
@@ -26,4 +27,4 @@ block content
 
 
         div.largePaddingBottom
-            include ../includes/alternativeForm
+            +alternativeForm('area')
