--- a/server/views/bassReferral/unsuitable.pug
+++ b/server/views/bassReferral/unsuitable.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/alternativeForm
 
 block content
 
@@ -21,4 +22,4 @@ block content
                         p#rejectedTown.bold.noMargin #{bassRequest.proposedTown}
 
         div.largePaddingBottom
-            include ../includes/alternativeForm
+            +alternativeForm('address')
