Factor out type label for alternative form

--- a/server/views/proposedAddress/rejected.pug
+++ b/server/views/proposedAddress/rejected.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/alternativeForm
 
 block content
 
@@ -42,4 +43,4 @@ block content
 
 
         div.largePaddingBottom
-            include ../includes/alternativeForm
+            +alternativeForm('address')
