updated address showing views

--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -14,7 +14,7 @@ block content
 
             if address
 
-                +addressDetail('preferred', address)
+                +addressDetail('preferred', address, {}, {})
 
         h3.heading-medium Decision
 
