--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -14,7 +14,7 @@ block content
 
             if address
 
-                +addressDetail('curfew', address)
+                +addressDetail('curfew', address, {}, {})
 
         form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
