removed date picker from conditions

--- a/assets/sass/additionalConditions.scss
+++ b/assets/sass/additionalConditions.scss
@@ -73,6 +73,14 @@
         float: left;
         padding: 30px 7px 0 7px;
     }
+
+    .form-date {
+        .form-group {
+            padding: 0;
+            margin-right: 20px;
+            margin-bottom: 0;
+        }
+    }
 }
 
 .notice-container {
