--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -8,7 +8,7 @@
 
 
 div.largeMarginBottom
-    h2.heading-medium Curfew address and opt out
+    h2.heading-medium Curfew address
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
 
@@ -19,7 +19,7 @@ div.largeMarginBottom
                 if decisions.bassAreaNotSuitable
                     span.alert.bold BASS area rejected
                 else if tasks.bassRequest === 'DONE'
-                    | Offender has opted in and requested BASS referral
+                    | Completed
                 else
                     | Not completed
 
