--- a/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
@@ -3,19 +3,13 @@ div.largeMarginBottom
     h2.heading-medium Submit curfew address
 
     div.pure-g
+        div.pure-u-1.pure-u-md-3-4
+            if licenceStatus.tasks.curfewAddress === 'DONE'
+                | Ready to submit
+            else
+                | Not completed
 
-        if licenceStatus.decisions.optedOut
-            div.pure-u-1.pure-u-md-3-4
-                | Submission unavailable - Offender has opted out of HDC
-
-        else
-            div.pure-u-1.pure-u-md-3-4
-                if ['DONE'].includes(licenceStatus.tasks.curfewAddress)
-                    | Ready to submit
-                else
-                    | Not completed
-
-            div.pure-u-1.pure-u-md-1-4.center
-                if ['DONE'].includes(licenceStatus.tasks.curfewAddress) && !licenceStatus.decisions.optedOut
-                    -var path = '/hdc/review/curfewAddress/' + prisonerInfo.bookingId
-                    +continue(path)
+        div.pure-u-1.pure-u-md-1-4.center
+            if licenceStatus.tasks.curfewAddress === 'DONE' && !licenceStatus.decisions.optedOut
+                -var path = '/hdc/review/curfewAddress/' + prisonerInfo.bookingId
+                +continue(path)
