--- a/server/views/bassReferral/unsuitable.pug
+++ b/server/views/bassReferral/unsuitable.pug
@@ -22,4 +22,4 @@ block content
                         p#rejectedTown.bold.noMargin #{bassRequest.proposedTown}
 
         div.largePaddingBottom
-            +alternativeForm('address')
+            +alternativeForm('area')
